style.css
body {
	--shape-size: 30px;
	--shape-f-color: #000;
	--content-width: calc(var(--shape-size) * 10);
	--content-height: calc(var(--shape-size) * 24);
	--sidebar-width: 320px;

	margin: 0;
	padding: 0;
	font-family: sans-serif;
}

h1, h2, h3 {
	margin: 0;
	text-align: center;
}
h1 {
	font-size: 24px;
}
h2 {
	font-size: 20px;
}
h3 {
	font-size: 16px;
}

.container {
	margin: 0 auto;
	padding: 40px 20px;
	display: grid;
	grid-template-columns: var(--sidebar-width) fit-content(100%) var(--sidebar-width);
	justify-content: center;
	gap: 20px;
}

.block {
	padding: 8px 10px 6px;
	border: 2px solid #dcdcdc;
}
.block + .block {
	margin-top: 20px;
}

.stats {
	margin: 20px 0 0;
	padding: 0;
	font-size: 24px;
	list-style: none;
}
.stats li {
	display: grid;
	grid-template-columns: calc(var(--shape-size) * 4) 40%;
	gap: 20px;
	justify-content: flex-end;
}
.stats li + li {
	margin-top: 20px;
}
.stats li > span:first-child {
	display: flex;
	justify-content: center;
	align-items: center;
}
.stats li > span:last-child {
	display: flex;
	align-items: center;
}
.stats .shape {
	position: relative;
}

.shape {
	position: absolute;
	display: block;
	color: var(--shape-f-color);
}
.shape::before,
.shape::after {
	position: absolute;
	background-color: currentcolor;
	content: "";
}

/* shape F */
.shape-f,
.shape-f_3 {
	width: calc(var(--shape-size) * 3);
	height: calc(var(--shape-size) * 2);
}
.shape-f_2,
.shape-f_4 {
	width: calc(var(--shape-size) * 2);
	height: calc(var(--shape-size) * 3);
}

.shape-f::before,
.shape-f_3::before {
	left: 50%;
	transform: translateX(-50%);
	width: 33.3333%;
	height: 50%;
}
.shape-f_3::before {
	top: 50%;
}
.shape-f::after,
.shape-f_3::after {
	width: 100%;
	height: 50%;
}
.shape-f::after {
	top: 50%;
}
.shape-f_2::before,
.shape-f_4::before {
	top: 50%;
	transform: translateY(-50%);
	width: 50%;
	height: 33.3333%;
}
.shape-f_2::before {
	left: 50%;
}
.shape-f_2::after,
.shape-f_4::after {
	width: 50%;
	height: 100%;
}
.shape-f_4::after {
	left: 50%;
}

/* shape LEG */
.shape-leg,
.shape-leg_3,
.shape-leg_r,
.shape-leg_r3 {
	width: calc(var(--shape-size) * 3);
	height: calc(var(--shape-size) * 2);
}
.shape-leg_2,
.shape-leg_4,
.shape-leg_r2,
.shape-leg_r4 {
	width: calc(var(--shape-size) * 2);
	height: calc(var(--shape-size) * 3);
}

.shape-leg::before,
.shape-leg_3::before,
.shape-leg_r::before,
.shape-leg_r3::before {
	width: 33.3333%;
	height: 50%;
}
.shape-leg_2::before,
.shape-leg_4::before,
.shape-leg_r2::before,
.shape-leg_r4::before {
	width: 50%;
	height: 33.3333%;
}

.shape-leg::after,
.shape-leg_2::after,
.shape-leg_3::after,
.shape-leg_r::after,
.shape-leg_r3::after {
	width: 100%;
	height: 50%;
}
.shape-leg_2::after,
.shape-leg_4::after,
.shape-leg_2::after,
.shape-leg_r2::after,
.shape-leg_r4::after {
	width: 50%;
	height: 100%;
}

.shape-leg_2::after,
.shape-leg_3::before,
.shape-leg_4::before,
.shape-leg_r2::before,
.shape-leg_r3::before,
.shape-leg_r4::after {
	right: 0;
}

.shape-leg::before,
.shape-leg_3::after,
.shape-leg_4::before,
.shape-leg_r::after,
.shape-leg_r3::before,
.shape-leg_r4::before {
	bottom: 0;
}

/* shape Z */
.shape-z,
.shape-z_r {
	width: calc(var(--shape-size) * 3);
	height: calc(var(--shape-size) * 2);
}
.shape-z_2,
.shape-z_r2 {
	width: calc(var(--shape-size) * 2);
	height: calc(var(--shape-size) * 3);
}
.shape-z::before, .shape-z::after,
.shape-z_r::before, .shape-z_r::after {
	width: 66.6666%;
	height: 50%;
}
.shape-z_2::before, .shape-z_2::after,
.shape-z_4::before, .shape-z_4::after,
.shape-z_r2::before, .shape-z_r2::after {
	width: 50%;
	height: 66.6666%;
}

.shape-z::after, .shape-z_2::after,
.shape-z_r::before, .shape-z_r2::after {
	right: 0;
}
.shape-z::after, .shape-z_2::before,
.shape-z_r::after, .shape-z_r2::after {
	bottom: 0;
}

/* shape square */
.shape-square {
	width: calc(var(--shape-size) * 2);
	height: calc(var(--shape-size) * 2);
	color: var(--shape-f-color);
	background-color: currentcolor;
}

/* shape square */
.shape-line {
	width: calc(var(--shape-size) * 4);
	height: calc(var(--shape-size) * 1);
	color: var(--shape-f-color);
	background-color: currentcolor;
}
.shape-line_2 {
	width: calc(var(--shape-size) * 1);
	height: calc(var(--shape-size) * 4);
	color: var(--shape-f-color);
	background-color: currentcolor;
}

.next-shape {
	display: grid;
	grid-template-columns: 1fr 1fr;
	justify-content: center;
	align-items: center;
}
.next-shape__icon {
	height: calc(var(--shape-size) * 4);
	display: flex;
	justify-content: center;
	align-items: center;
}

.score p {
	margin: 0;
	font-size: 20px;
	text-align: center;
}

.nav-hint {
	position: relative;
	margin: 0;
	padding: 0;
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	list-style: none;
}
.nav-hint__item {
	height: 48px;
	display: grid;
	align-items: center;
	justify-content: center;
}
.nav-hint__item_left {
	transform: rotate(180deg);
}
.nav-hint__item_down {
	transform: rotate(90deg);
}

.content {
	padding: 10px;
}
.content__inner {
	position: relative;
	width: var(--content-width);
	height: var(--content-height);
	overflow: hidden;
}

